examples/passing/ImportExplicit/M1.purs
module M1 where

data X = X | Y
data Z = Z
