examples/failing/DeclConflictDuplicateCtor.purs
-- @shouldFailWith DeclConflict
module Main where

data T = Fail | Fail

